fixing mobile dark mode button toggle

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -571,22 +571,14 @@ span:hover {
 #darkmodebutton {
     position: absolute;
     display: inline;
-    top: 20px;
-    right: 8%;
+    top: 0px;
+    right: 1%;
     z-index: 3;
 } 
 
 #darkmodetag {
     float: right;
 }
-
-
-
-
-
-
-
-
 
 input[type=checkbox]{
 	height: 0;
@@ -597,8 +589,8 @@ input[type=checkbox]{
 label {
     cursor: pointer;
 	text-indent: -9999px;
-	width: 60px;
-    height: 35px;
+	width: 50px;
+    height: 30px;
 	background: #333333;
 	display: block;
 	border-radius: 100px;
@@ -610,8 +602,8 @@ label:after {
 	position: absolute;
 	top: 5px;
     left: 5px;
-	width: 25px;
-	height: 25px;
+	width: 20px;
+	height: 20px;
 	background: #fff;
 	border-radius: 90px;
 	transition: 0.3s;
@@ -627,5 +619,15 @@ input:checked + label:after {
 }
 
 label:active:after {
-	width: 30px;
+	width: 20px;
+}
+
+#tag {
+    float: right;
+    margin-top: 30px;
+    margin-left: 5px;
+}
+
+#button {
+    float: left;
 }
